chore: refactor middlewares, add helmet package, add remove sessions for features

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "express": "^4.21.1",
     "express-rate-limit": "^7.4.1",
     "geoip-lite": "^1.4.10",
+    "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.4",
     "ms": "^2.1.3",
