--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@types/ms": "^0.7.34",
     "@types/node": "^22.10.1",
     "@types/nodemailer": "^6.4.17",
+    "@types/passport": "^1.0.17",
+    "@types/passport-google-oauth20": "^2.0.16",
     "@types/socket.io": "^3.0.2",
     "@types/validator": "^13.12.2",
     "@types/winston": "^2.4.4",
@@ -40,6 +42,7 @@
   "dependencies": {
     "@paypal/checkout-server-sdk": "^1.0.3",
     "@paypal/paypal-server-sdk": "^0.6.1",
+    "@types/express-session": "^1.18.1",
     "@types/paypal__checkout-server-sdk": "^1.0.8",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
@@ -48,12 +51,15 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
     "express-rate-limit": "^7.4.1",
+    "express-session": "^1.18.1",
     "geoip-lite": "^1.4.10",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.4",
     "ms": "^2.1.3",
     "nodemailer": "^6.9.16",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "path-to-regexp": "^8.2.0",
     "paypal-rest-sdk": "^1.8.1",
     "socket.io": "^4.8.1",
