--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/express-session": "^1.18.1",
     "@types/fluent-ffmpeg": "^2.1.27",
     "@types/multer": "^1.4.12",
+    "@types/node-cron": "^3.0.11",
     "@types/paypal__checkout-server-sdk": "^1.0.8",
     "amqplib": "^0.10.5",
     "axios": "^1.7.9",
@@ -63,6 +64,7 @@
     "mongoose": "^8.8.4",
     "ms": "^2.1.3",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.16",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
