--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/socket.io": "^3.0.2",
     "@types/validator": "^13.12.2",
     "@types/winston": "^2.4.4",
+    "@types/xlsx": "^0.0.36",
     "@typescript-eslint/eslint-plugin": "^8.17.0",
     "@typescript-eslint/parser": "^8.17.0",
     "eslint": "^9.16.0",
@@ -72,6 +73,7 @@
     "ua-parser-js": "^2.0.0",
     "uuid": "^11.0.5",
     "validator": "^13.12.0",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "xlsx": "^0.18.5"
   }
 }
