--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "@types/express-rate-limit": "^6.0.2",
     "@types/geoip-lite": "^1.4.4",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/moment": "^2.13.0",
     "@types/mongoose": "^5.11.97",
     "@types/ms": "^0.7.34",
-    "@types/node": "^22.10.1",
+    "@types/node": "^22.13.1",
     "@types/nodemailer": "^6.4.17",
     "@types/passport": "^1.0.17",
     "@types/passport-google-oauth20": "^2.0.16",
@@ -49,6 +50,7 @@
     "@types/multer": "^1.4.12",
     "@types/node-cron": "^3.0.11",
     "@types/paypal__checkout-server-sdk": "^1.0.8",
+    "@types/qs": "^6.9.18",
     "amqplib": "^0.10.5",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
@@ -63,6 +65,7 @@
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "latest": "^0.2.0",
+    "moment": "^2.30.1",
     "mongoose": "^8.8.4",
     "ms": "^2.1.3",
     "multer": "^1.4.5-lts.1",
@@ -72,6 +75,7 @@
     "passport-google-oauth20": "^2.0.0",
     "path-to-regexp": "^8.2.0",
     "paypal-rest-sdk": "^1.8.1",
+    "qs": "^6.14.0",
     "socket.io": "^4.8.1",
     "ua-parser-js": "^2.0.0",
     "uuid": "^11.0.5",
