--- a/package.json
+++ b/package.json
@@ -47,10 +47,12 @@
     "@types/amqplib": "^0.10.6",
     "@types/express-session": "^1.18.1",
     "@types/fluent-ffmpeg": "^2.1.27",
+    "@types/jsdom": "^21.1.7",
     "@types/multer": "^1.4.12",
     "@types/node-cron": "^3.0.11",
     "@types/paypal__checkout-server-sdk": "^1.0.8",
     "@types/qs": "^6.9.18",
+    "@types/sanitize-html": "^2.13.0",
     "amqplib": "^0.10.5",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
@@ -63,6 +65,7 @@
     "fluent-ffmpeg": "^2.1.3",
     "geoip-lite": "^1.4.10",
     "helmet": "^8.0.0",
+    "jsdom": "^26.0.0",
     "jsonwebtoken": "^9.0.2",
     "latest": "^0.2.0",
     "moment": "^2.30.1",
@@ -76,6 +79,7 @@
     "path-to-regexp": "^8.2.0",
     "paypal-rest-sdk": "^1.8.1",
     "qs": "^6.14.0",
+    "sanitize-html": "^2.14.0",
     "socket.io": "^4.8.1",
     "ua-parser-js": "^2.0.0",
     "uuid": "^11.0.5",
