--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "tsc",
     "start": "ts-node src/index.ts",
     "dev": "nodemon --exec ts-node src/index.ts",
+    "fast-dev":"nodemon --exec 'ts-node --transpileOnly' src/index.ts",
     "build": "npx tsc",
     "product": "node dist/index.js"
   },
