feat: adjust sign up feature

--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "npx tsc",
     "start": "ts-node src/index.ts",
     "dev": "nodemon --exec ts-node src/index.ts",
-    "fast-dev":"nodemon --exec 'ts-node --transpileOnly' src/index.ts",
-    "build": "npx tsc",
+    "fast-dev": "nodemon --exec 'ts-node --transpileOnly' src/index.ts",
     "product": "node dist/index.js"
   },
   "keywords": [],
@@ -20,6 +19,7 @@
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^8.2.3",
+    "@types/ejs": "^3.1.5",
     "@types/express": "^5.0.0",
     "@types/express-rate-limit": "^6.0.2",
     "@types/geoip-lite": "^1.4.4",
@@ -64,6 +64,7 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-rate-limit": "^7.4.1",
     "express-session": "^1.18.1",
