--- a/package.json
+++ b/package.json
@@ -70,8 +70,10 @@
     "express-rate-limit": "^7.4.1",
     "express-session": "^1.18.1",
     "fluent-ffmpeg": "^2.1.3",
+    "fs": "^0.0.1-security",
     "geoip-lite": "^1.4.10",
     "helmet": "^8.0.0",
+    "https": "^1.0.0",
     "jsdom": "^26.0.0",
     "jsonwebtoken": "^9.0.2",
     "latest": "^0.2.0",
